end servcies section

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,13 @@ html::-webkit-scrollbar-thumb {
 section {
     padding: 5rem 10%;
 }
+.heading-title {
+    text-align: center;
+    margin-bottom: 3rem;
+    font-size: 6rem;
+    text-transform: uppercase;
+    color: var(--black);
+}
 /*--- Start Header Section ---*/
 .header {
     position: sticky;
@@ -70,6 +77,30 @@ section {
     color: var(--black);
     display: none;
 }
+/*--- Start Services Section ---*/
+.services .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit , minmax(16rem , 1fr));
+    gap: 1.5rem;    
+}
+.services .box-container .box {
+    padding: 3rem 2rem;
+    text-align: center;
+    background-color: var(--main-color);
+    cursor: pointer;
+}
+.services .box-container .box:hover {
+    background-color: var(--black);
+}
+.services .box-container .box img {
+    height: 7rem;
+}
+.services .box-container .box h3 {
+    color: var(--white);
+    font-size: 1.7rem;
+    padding-top: 1rem;
+}
+/*--- End Services Section ---*/
 
 /*--- Start Footer Section ---*/
 .footer {
@@ -147,5 +178,9 @@ section {
 @media (max-width: 450px) {
     html {
         font-size: 50%;
+    }
+
+    .heading-title {
+        font-size: 3.5rem;
     }
 }
