--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,49 @@ section {
     padding: 1rem 0;
 }
 /*--- End Home -> About Section ---*/
+/*--- Start Home -> Package Section ---*/
+.home-packages {
+    background-color: var(--light-bg);
+}
+.home-packages .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit , minmax(30rem , 1fr));
+    gap: 2rem;
+}
+.home-packages .box-container .box {
+    border: var(--border);
+    box-shadow: var(--box-shadow);
+    background-color: var(--white);
+}
+.home-packages .box-container .box .image {
+    overflow: hidden;
+    height: 25rem;
+}
+.home-packages .box-container .box .image img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    transition: .2s linear;
+}
+.home-packages .box-container .box .content {
+    padding: 2rem;
+    text-align: center;
+}
+.home-packages .box-container .box .content h3 {
+    font-size: 2.5rem;
+    color: var(--black);
+}
+.home-packages .box-container .box .content p {
+    font-size: 1.5rem;
+    color: var(--light-black);
+    line-height: 2;
+    padding: 1rem 0;
+}
+.home-packages .load-more {
+    text-align: center;
+    margin-top: 2rem;
+}
+/*--- End Home -> Package Section ---*/
 /*--- Start Services Section ---*/
 .services .box-container {
     display: grid;
