finish main -> about section

--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,22 @@ section {
     text-transform: uppercase;
     color: var(--black);
 }
+.heading {
+    background-size: cover !important;
+    background-position: center !important;
+    padding-top: 10rem;
+    padding-bottom: 15rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.heading h1 {
+    font-size: 10rem;
+    text-transform: uppercase;
+    color: var(--white);
+    text-shadow: var(--text-shadow);
+
+}
 .btn {
     display: inline-block;
     background: var(--black);
@@ -276,6 +292,56 @@ section {
 
 }
 /*--- End Home -> Offer Section ---*/
+/*--- Start Main -> About Section ---*/
+.about {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 3rem;
+}
+.about .image {
+    flex:1 1 41rem;
+}
+.about .image img {
+    width: 100%;
+}
+.about .content {
+    flex:1 1 41rem;
+    text-align: center;
+}
+.about .content h3 {
+    font-size: 3rem;
+    color: var(--black);
+}
+.about .content p {
+    color: var(--light-black);
+    font-size: 1.5rem;
+    line-height: 2;
+    padding: 1rem 0;
+}
+.about .content .icons-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    align-items: flex-end;
+    margin-top: 2rem;
+}
+.about .content .icons-container .icon {
+    background-color: var(--light-bg);
+    padding: 2rem;
+    flex: 1 1 16rem;
+}
+.about .content .icons-container .icon i{
+    font-size: 4rem;
+    color: var(--main-color);
+    margin-bottom: 2rem;
+}
+.about .content .icons-container .icon span {
+    font-size: 1.5rem;
+    color: var(--light-black);
+    display: block;
+}
+/*--- End MAin -> About Section ---*/
 /*--- Start Footer Section ---*/
 .footer {
     background: url(../images/footer-bg.jpg) no-repeat;
