--- a/css/style.css
+++ b/css/style.css
@@ -383,6 +383,58 @@ section {
     margin-top: 1rem;
 }
 /*--- End Main -> Reviews Section ---*/
+/*--- Start Main -> Packages Section ---*/
+.packages {
+    background-color: var(--light-bg);
+}
+.packages .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit , minmax(40rem , 1fr));
+    gap: 2rem;
+}
+.packages .box-container .box {
+    border: var(--border);
+    box-shadow: var(--box-shadow);
+    background-color: var(--white);
+    display: none;
+}
+.packages .box-container .box:nth-child(1),
+.packages .box-container .box:nth-child(2),
+.packages .box-container .box:nth-child(3),
+.packages .box-container .box:nth-child(4),
+.packages .box-container .box:nth-child(5),
+.packages .box-container .box:nth-child(6) {
+    display: inline-block;
+}
+.packages .box-container .box .image {
+    overflow: hidden;
+    height: 25rem;
+}
+.packages .box-container .box .image img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    transition: .2s linear;
+}
+.packages .box-container .box .content {
+    padding: 2rem;
+    text-align: center;
+}
+.packages .box-container .box .content h3 {
+    font-size: 2.5rem;
+    color: var(--black);
+}
+.packages .box-container .box .content p {
+    font-size: 1.4rem;
+    color: var(--light-black);
+    line-height: 2;
+    padding: 1rem 0;
+}
+.packages .load-more {
+    text-align: center;
+    margin-top: 2rem;
+}
+/*--- End Main -> Packages Section ---*/
 /*--- Start Footer Section ---*/
 .footer {
     background: url(../images/footer-bg.jpg) no-repeat;
