--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,66 @@ section {
 .btn:hover {
     background-color: var(--main-color);
 }
+/* --- Start Register Form --- */
+.form-container {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    padding-bottom: 60px;
+    background-color: var(--light-bg);
+}
+.form-container form {
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .1);
+    background-color: var(--white);
+    text-align: center;
+    width: 500px;
+}
+.form-container form h3 {
+    font-size: 30px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    color: var(--black);
+}
+.form-container form input {
+    width: 100%;
+    padding: 10px 15px;
+    font-size: 17px;
+    margin: 8px 0;
+    background-color: var(--light-bg);
+    border-radius: 5px;
+}
+.form-container form .form-btn {
+    background-color: var(--main-color);
+    color: var(--white);
+    text-transform: capitalize;
+    font-size: 20px;
+    cursor: pointer;
+}
+.form-container form .form-btn:hover {
+    background-color: #9b50ba ;
+}
+.form-container form p {
+    margin-top: 10px;
+    font-size: 20px;
+    color: #333;
+}
+.form-container form p a {
+    color: var(--main-color);
+}
+.form-container form .error-msg {
+    margin: 10px 0;
+    display: block;
+    background-color: crimson;
+    color: var(--white);
+    border-radius: 5px;
+    font-size: 20px; 
+    padding: 10px;
+}
+/* --- End Register Form --- */
 /*--- Start Header Section ---*/
 .header {
     position: sticky;
